# moneyman

./: .gitignore  SERVER_SETUP.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  moneyman.db  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: accounts.py  ai.py  analytics.py  categories.py  transactions.py
backend/app/services/: groq_service.py  ocr_service.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/accounts/: page.tsx
frontend/src/app/backend/[...path]/: route.ts
frontend/src/app/settings/: page.tsx
frontend/src/app/transactions/: page.tsx
frontend/src/app/utilities/: page.tsx
frontend/src/components/dashboard/: AccountLimitBars.tsx  CategoryPieChart.tsx  RecentTransactions.tsx  SpendingTrendChart.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/lib/: api.ts  types.ts
