[project]
name = "moneyman"
version = "0.1.0"
description = "Personal finance tracking with AI features"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "python-multipart>=0.0.9",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "groq>=0.11.0",
    "python-dotenv>=1.0.0",
    "alembic>=1.13.0",
    "aiofiles>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
